# longform-ai-editor

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
cursor-tracker/: README.md  cursor_logger.py  record.sh  requirements.txt  screen_flash.py
docs/: future-improvements.md
docs/plans/: build-plan-2026-04-17.md
examples/: sample_session_config.toml
scripts/: download_models.sh  install.sh  install_cursor_tracker.sh  verify_env.py
src/: __init__.py  cli.py  config.py  pipeline.py
src/shortform/: __init__.py  captions.py  pipeline.py  reframe.py  render.py  score.py  segment.py  transcribe.py
src/stages/: analyze_llm.py  cursor_idle.py  cursor_zoom.py  dead_zone_detect.py  element_aware.py  face_visibility.py  polish.py  render.py  scroll_zoom.py  sync_clap.py  transcribe.py  unify_segments.py  verify_cuts.py
src/utils/: ffmpeg_helpers.py  log_parsers.py  timecodes.py
tests/: README.md  conftest.py  test_analyze_llm.py  test_cursor_idle.py  test_cursor_zoom.py  test_dead_zone_detect.py  test_face_visibility.py  test_log_parsers.py  test_polish.py  test_render.py  test_sync.py  test_timecodes.py  test_transcribe.py  test_unify_segments.py  test_verify_cuts.py  test_zoom_v2_element.py  test_zoom_v2_scroll.py  test_zoom_v2_speech.py
tests/shortform/: test_captions.py  test_pipeline.py  test_reframe.py  test_render.py  test_score.py  test_segment.py
