[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "long-form-editor"
version = "0.1.0-dev"
description = "Dual-track long-form YouTube editor for Apple M5 Max. 100% local, OSS."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}

dependencies = [
    # Transcription + LLM
    "mlx-whisper>=0.4.0",
    "mlx-lm>=0.20",
    # Audio / video analysis
    "librosa>=0.10.2",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    # Subprocess + loudness
    "ffmpeg-normalize>=1.37.6",
    # LLM HTTP + validation
    "httpx>=0.27",
    "pydantic>=2.7",
    "tenacity>=8.3",
    # Config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
lfe = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "slow: tests that require LLM or full render (deselect with -m 'not slow')",
]
